--- a/kelase brili.html
+++ b/kelase brili.html
@@ -492,22 +492,22 @@
         <section id="beranda">
             <h1>KELAS XII-3</h1>
             <p>Solidaritas, Kreativitas, dan Kenangan Indah.</p>
-            <a href="#galeri" class="btn">Lihat Galeri Kami</a>
+            <a href="#galeri" class="btn">Galeri Kita</a>
         </section>
 
         <section id="tentang">
             <div class="container">
                 <div class="section-header">
-                    <h2>Tentang Kelas Kami</h2>
+                    <h2>Tentang Kelas Kita</h2>
                     <p>Rumah kedua, tempat kami bertumbuh.</p>
                 </div>
                 
                 <div class="tentang-content">
-                    <img src="https://via.placeholder.com/600x400.png?text=Foto+Kelas+XII-3" alt="Foto Kelas">
+                    <img src="foto4.jpg" alt="Foto Kelas">
                     <div>
                         <h3>SATU CERITA, SATU KELUARGA</h3>
-                        <p>Kami adalah angkatan 2024/2025 yang terdiri dari 34 siswa-siswi hebat. Bagi kami, XII-3 bukan hanya sekadar ruang kelas, tapi sebuah keluarga tempat kami berbagi tawa, ide-ide gila, dan saling mendukung.</p>
-                        <p>Dibimbing oleh wali kelas kami yang tercinta, <strong>Bapak/Ibu [Nama Wali Kelas]</strong>, kami bertekad untuk membuat tahun terakhir ini menjadi yang paling berkesan.</p>
+                        <p>Kami adalah angkatan 2025/2026 yang terdiri dari 34 siswa-siswi hebat. Bagi kami, XII-3 bukan hanya sekadar ruang kelas, tapi sebuah keluarga tempat kami berbagi tawa, ide-ide gila, dan saling mendukung.</p>
+                        <p>Dibimbing oleh wali kelas kami yang tercinta, <strong>Bu Erliyah</strong>, kami bertekad untuk membuat tahun terakhir ini menjadi yang paling berkesan.</p>
                         <a href="#jadwal" class="btn">Lihat Jadwal Pelajaran</a>
                     </div>
                 </div>
@@ -585,18 +585,18 @@
         <section id="galeri">
             <div class="container">
                 <div class="section-header">
-                    <h2>Galeri Kenangan</h2>
+                    <h2>Galeri Kita</h2>
                     <p>Momen-momen yang kami abadikan bersama.</p>
                 </div>
                 
                 <div class="galeri-grid">
                     <div class="galeri-item">
-                        <img src="https://via.placeholder.com/400x300.png?text=Studi+Tur" alt="Galeri 1">
-                        <div class="overlay">Studi Tur Yogyakarta</div>
+                        <img src="foto1.jpg" alt="Galeri 1">
+                        <div class="overlay"></div>
                     </div>
                     <div class="galeri-item">
-                        <img src="https://via.placeholder.com/400x300.png?text=Lomba+17an" alt="Galeri 2">
-                        <div class="overlay">Lomba 17 Agustus</div>
+                        <img src="foto2.jpg" alt="Galeri 2">
+                        <div class="overlay"></div>
                     </div>
                     <div class="galeri-item">
-                        <img src="https://via.placeholder.com/400x300.png?text=Classmeeting" alt="Galeri 
+                        <img src="foto3.jpg" alt="Galeri 
