--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         /* 1. Hero Section (Beranda) */
         #beranda {
-            background: linear-gradient(rgba(18, 18, 30, 0.8), rgba(18, 18, 30, 0.8)), url(https://images.unsplash.com/photo-1543269865-cbf427effbad?w=1100&q=80);
+            background: linear-gradient(rgba(18, 18, 30, 0.8), rgba(18, 18, 30, 0.8)), url(foto1.jpg);
             background-size: cover;
             background-position: center;
             height: 90vh;
