--- a/index.html
+++ b/index.html
@@ -362,6 +362,14 @@
         .galeri-item:hover img {
             transform: scale(1.1); /* Efek zoom */
         }
+
+        <div style="margin-bottom: 20px;">
+    <p style="color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 10px;">Putar Lagu Kenangan:</p>
+    <audio controls loop>
+        <source src="musikxii.mp3" type="audio/mpeg">
+        Browser kamu tidak mendukung pemutaran audio.
+    </audio>
+</div>
         
         /* Overlay Teks di Galeri */
         .galeri-item .overlay {
