--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         /* 1. Hero Section (Beranda) */
         #beranda {
-            background: linear-gradient(rgba(18, 18, 30, 0.8), rgba(18, 18, 30, 0.8)), url(https://images.unsplash.com/photo-1543269865-cbf427effbad?w=1100&q=80);
+            background: linear-gradient(rgba(18, 18, 30, 0.8), rgba(18, 18, 30, 0.8)), url(foto1.jpg);
             background-size: cover;
             background-position: center;
             height: 90vh;
@@ -478,7 +478,7 @@
 <body>
 
 <audio id="laguLatar" loop>
-    <source src="musik/kenangan.mp3" type="audio/mpeg">
+    <source src="musikxii.mp3" type="audio/mpeg">
 </audio>
 <header class="navbar">
         <div class="container">
@@ -517,7 +517,7 @@
                     <img src="foto4.jpg" alt="Foto Kelas">
                     <div>
                         <h3>SATU CERITA, SATU KELUARGA</h3>
-                        <p>Kami adalah angkatan 2025/2026 yang terdiri dari 34 siswa-siswi hebat. Bagi kami, XII-3 bukan hanya sekadar ruang kelas, tapi sebuah keluarga tempat kami berbagi tawa, ide-ide gila, dan saling mendukung.</p>
+                        <p>Kami adalah angkatan 2025/2026 yang terdiri dari 33 siswa-siswi hebat. Bagi kami, XII-3 bukan hanya sekadar ruang kelas, tapi sebuah keluarga tempat kami berbagi tawa, ide-ide gila, dan saling mendukung.</p>
                         <p>Dibimbing oleh wali kelas kami yang tercinta, <strong>Bu Erliyah</strong>, kami bertekad untuk membuat tahun terakhir ini menjadi yang paling berkesan.</p>
                         <a href="#jadwal" class="btn">Lihat Jadwal Pelajaran</a>
                     </div>
