--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 </head>
 <body>
 
-<audio id="laguLatar" loop>
+<audio id="laguLatar" autoplay>
     <source src="musikxii.mp3" type="audio/mpeg">
 </audio>
 <header class="navbar">
